[package]
name = "safe_ecs_derive"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/BoxyUwU/safe_ecs"
repository = "https://github.com/BoxyUwU/safe_ecs"
description = "proc macro crate for `safe_ecs`"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
